feat: Refactor to Tauri app and improve UI
Migrates the web application to a Tauri desktop application, enabling offline functionality and a more integrated user experience.

Key changes include:
- **Project Setup:** Configured `package.json` and `tauri.conf.json` for Tauri integration.
- **UI Enhancements:** Updated the application title and description in `index.html` and `metadata.json` to "حاسبة الخدمة العسكرية".
- **Code Cleanup:** Removed Babel dependency and simplified script loading in `index.html`. Adjusted import paths in `index.tsx`.
- **Icon Removal:** Removed the unused `SaifAliLogoIcon` from `components/icons.tsx`.
- **Type Refinement:** Adjusted `ServiceType` in `types.ts` to remove an unused option.
- **Word Conversion Logic:** Enhanced the `numberToWordsAr` function in `App.tsx` for more accurate Arabic number-to-word conversion, particularly for larger numbers and currencies.
- **README Update:** Updated the `README.md` with a new AI Studio app link.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
-
 {
-  "name": "service-calculator-webapp",
+  "name": "service-calculator",
   "private": true,
   "version": "1.0.0",
-  "description": "تطبيق ويب لحساب إجمالي مدة الخدمة العسكرية."
+  "scripts": {
+    "tauri": "tauri"
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^1.5.11"
+  }
 }
